@@ -93,6 +93,7 @@ Changelog for 1.3.35
 * Updated gnome2 stylesheet (Pongracz I)
 * Updated Hungarian translation (Pongracz I)
 * Fixed is_zero error on inventory activity report (Chris T)
+* Fixed bug 861, receipts saying "pay from" cash account (Chris T)
 
 
 Changelog for 1.3.34
